fix hero overflow.

--- a/hero.scss
+++ b/hero.scss
@@ -5,9 +5,8 @@
     display: grid;
     grid-template-columns: 1fr;
     position: relative;
-    width: 100vw;
+    width: 99.5vw;
     margin-left:calc(50% - (50vw) );
-    overflow-x: hidden;
     
     //Media queries
 
